; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/efivar/extr_efivar.c_write_variable.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/efivar/extr_efivar.c_write_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@attrib = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"efi_set_variable\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @write_variable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_variable(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @breakdown_name(i8* %9, i32* %6, i8** %5)
  %11 = load i8*, i8** %4, align 8
  %12 = call i32* @get_value(i8* %11, i64* %7)
  store i32* %12, i32** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i32, i32* @attrib, align 4
  %18 = call i64 @efi_set_variable(i32 %13, i8* %14, i32* %15, i64 %16, i32 %17)
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %2
  %21 = call i32 @err(i32 1, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %2
  ret void
}

declare dso_local i32 @breakdown_name(i8*, i32*, i8**) #1

declare dso_local i32* @get_value(i8*, i64*) #1

declare dso_local i64 @efi_set_variable(i32, i8*, i32*, i64, i32) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
